<resources>
    <string name="app_name">SNMP Cockpit</string>
    <string name="close">Close</string>
    <string name="nav_header_ip_label">IP: %s</string>
    <string name="nav_header_ip">IP</string>
    <string name="title_activity_tabbed_device">Device detail view</string>
    <string name="edit_queries">Edit</string>
    <string-array name="snmp_versions">
        <item>1 / 2c</item>
        <item>3</item>
    </string-array>
    <string-array name="about_screen">
        <item>License (GPL v3)</item>
        <item>Wifi QR code schema</item>
        <item>Device QR code schema</item>
        <item>GitHub Repository (Web)</item>
        <item>Version and libraries</item>
        <item>Feedback (mail)</item>
        <item>Privacy policy</item>
    </string-array>
    <string name="pref_category_general">General</string>
    <string name="btn_ok">OK</string>
    <string name="no_secure_environment_label">A secure connection has to be established for further usage of SNMP Cockpit.</string>
    <string name="cancel_app_btn_label">Close App</string>
    <string name="snmp_version">SNMP version:</string>
    <string name="host">Host:</string>
    <string name="user">User:</string>
    <string name="public_default_community">public</string>
    <string name="community_label">Community:</string>
    <string name="port">Port:</string>
    <string name="drawer_header_ssid_label">SSID: %s</string>
    <string name="drawer_header_ssid">SSID</string>
    <string name="drawer_header_bssid">BSSID</string>
    <string name="drawer_header_ipv6_address_label">IPv6-Address:\n%s</string>
    <string name="drawer_header_ipv6_address">IPv6-Address</string>
    <string name="preference_version" translatable="false">%1$s (%2$d)</string>
    <string name="timestamp" translatable="false">%1$s</string>
    <string name="pref_version_title">Version</string>
    <string name="query_add_textinfo">Custom OID</string>
    <string name="device_refresh_toast_message">Information is updated.\nDevice:</string>
    <string name="snmp_usage_tab_content_mibs">MIBs</string>
    <string name="pref_session_timeout_summary">After a certain time of inactivity (in minutes) the user session expires and needs to be restarted.\n</string>
    <string name="device_detail_snmp_usage_query_label">Status</string>
    <string name="alert_session_timeout_message">Maximum session timeout was reached. All SNMP connections were closed.</string>
    <string name="device_card_sysservices" translatable="false">sysServices:</string>
    <string name="device_card_sysuptime" translatable="false">sysUpTime:</string>
    <string name="device_card_sysobject_id" translatable="false">sysObjectId:</string>
    <string name="device_card_syscontact" translatable="false">sysContact:</string>
    <string name="device_card_syslocation" translatable="false">sysLocation:</string>
    <string name="device_card_sysdescription" translatable="false">sysDescr:</string>
    <string name="device_card_sysname" translatable="false">sysName:</string>
    <string name="custom_query_oid">OID:</string>
    <string name="title_activity_tag_management">Manage tags</string>
    <string name="cancel">Cancel</string>
    <string name="app_logo_content_description">app logo</string>
    <string name="splash_screen_logo">Splash Screen Logo</string>
    <string name="no_own_queries_message">No queries created.\nSelect the plus-button in the lower right corner to create a query.</string>
    <string name="detail_info_task_view_label_table_attable">Address Translation | atTable</string>
    <string name="detail_info_task_view_label_table_egpneigh">egpNeighTable</string>
    <string name="hw_info_task_view_label_table_sensortable">Sensors | sensorTable</string>
    <string name="hw_info_task_view_label_table_dsktable">Devices I | dskTable</string>
    <string name="hw_info_task_view_label_table_hrdevicetable">Devices II | hrDeviceTable</string>
    <string name="hw_info_task_view_label_table_hrdiskstorage">Storage | hrDiskStorageTable</string>
    <string name="hw_info_task_view_label_table_hrpartitiontable">Partition table | hrPartitionTable</string>
    <string name="hw_info_task_view_label_table_la">Load | laTable</string>
    <string name="hw_info_task_view_label_table_ipsystemstats">ipSystemStatsTable</string>
    <string name="hw_info_task_view_label_table_ipifstats">ipIfStatsTable</string>
    <string name="hw_info_task_view_label_table_icmpstats">icmpStatsTable</string>
    <string name="activity_title_tag_management">Manage Hardware-Tags</string>
    <string name="activty_title_oid_single_query">Single OID query</string>
    <string name="add_custom_query_menu_label">New query</string>
    <string name="alert_connection_timeout_multi_remove">Remove connections</string>
    <string name="view_query_label">Execute</string>
    <string name="welcome_dialog_message">This app is working in WIFI networks only by default. Please configure the app in settings menu.</string>
    <string name="welcome_dialog_take_current_ssid_btn">Use current WIFI SSID</string>
    <string name="welcome_dialog_title">Welcome to SNMP Cockpit App!</string>
    <string name="wifi_activated_toast_label">WLAN activated</string>
    <string name="wifi_connection_list_item">\t• WLAN connection</string>
    <string name="wifi_connection_wpa_needed_list_item">\t• Connection security: WPA2-PSK or WPA2-EAP</string>
    <string name="wifi_disable_adapter">WLAN disabled</string>
    <string name="wifi_qr_code_network_change_success">Connection attempt has started for network \'%s\'.</string>
    <string name="update_label">Refresh</string>
    <string name="alert_session_timeout_title">User session timeout</string>
    <string name="alert_select_device_dialog_title">Choose device for SNMP queries with OID</string>
    <string name="alert_please_add_device_first">Please add a device first…</string>
    <string name="alert_open_query_in_new_device_tab">Open in new device tab</string>
    <string name="alert_open_query_in_new_activity">Open in new window</string>
    <string name="alert_connection_timeout_title">Connection broken</string>
    <string name="alert_connection_timeout_single_remove">Remove connection</string>
    <string name="alert_connection_timeout_single_message">The connection to the device has been lost.</string>
    <string name="alert_connection_timeout_retry">Retry</string>
    <string name="alert_connection_timeout_multiple_devices">The connections to multiple devices has been lost.</string>
    <string name="btn_autofill_qr_code">Autofill with QR-Code</string>
    <string name="btn_device_connect">Connect device</string>
    <string name="btn_no_longer_show">Do not show again</string>
    <string name="connect_to_device_toast">Connect to network \'%s\'</string>
    <string name="connect_to_device_toast_failed">Connecting to network \'%s\' failed</string>
    <string name="disconnect_all_devices_success">Disconnected from all devices</string>
    <string name="dialog_title_custom_query_edit">Edit query</string>
    <string name="dialog_title_custom_query_add">Add new query</string>
    <string name="empty_device_list_message">Actually no device is connected.\n Select the plus-button in the lower right corner to setup a new connection.</string>
    <string name="error_connecting_to_network">No successful WIFI-Connection possible for network \'%s\'. Access data correct?</string>
    <string name="fix_wifi_connection_ssid_list_item">\t• Allowed SSID: \'%s\'</string>
    <string name="flashlight_hint">For flash light, press volume buttons.</string>
    <string name="toast_no_valid_device_qr_code">No valid QR code received.</string>
    <string name="title_network_details">Network details</string>
    <string name="title_activity_snmplogin">Connect to a device</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_single_query_result">Query view</string>
    <string name="title_activity_own_queries">Custom queries</string>
    <string name="title_activity_about">About the app</string>
    <string name="snmpv3_key">Key:</string>
    <string name="snmp_usage_tab_content_title">Usage</string>
    <string name="show_password_label">Show password</string>
    <string name="nav_header_dns_server">DNS</string>
    <string name="navigate_up_content_description">Navigate back</string>
    <string name="navigation_drawer_close">Close menu</string>
    <string name="connection_information">Connection details</string>
    <string name="custom_query_hardware_type_hint">Hardware type</string>
    <string name="custom_query_name">Label</string>
    <string name="custom_query_name_label">Name:</string>
    <string name="custom_query_oid_field_label">Query-OID</string>
    <string name="custom_query_single_query_enabled">Enable single query mode</string>
    <string name="custom_query_tag_categories_label">Tags/categories</string>
    <string name="custom_query_tags">Categories</string>
    <string name="debug_menu_label">Expert settings</string>
    <string name="dialog_custom_query_tags_remove_last_tag_content_description">Remove last day</string>
    <string name="device_menu_disconnect">Disconnect from device</string>
    <string name="manage_query_label">Manage queries</string>
    <string name="menu_about_label">App information</string>
    <string name="menu_action_device_eject_label">Remove all devices</string>
    <string name="menu_action_qr_code_label">Scan WIFI QR Code</string>
    <string name="menu_action_wifi_disconnect_label">Disconnect WIFI</string>
    <string name="menu_catalog_label">MIB Catalog</string>
    <string name="menu_devices_label">Connected devices</string>
    <string name="menu_network_details_label">Network details</string>
    <string name="menu_own_queries_label">Custom Queries</string>
    <string name="menu_settings_label">Settings</string>
    <string name="pref_connection_test_retries_summary">Connection retries during initial connection test</string>
    <string name="pref_connection_test_retries_title">Connection test retries</string>
    <string name="pref_connection_test_timeout_title">Connection test timeout</string>
    <string name="pref_connection_test_timeout_summary">Connection timeout during initial connection test</string>
    <string name="pref_general_connection_retries_summary">Number of connection retries of established SNMP connections</string>
    <string name="pref_general_connection_retries_title">Connection retries</string>
    <string name="pref_general_connection_timeout_summary">General SNMP connection timeout in milliseconds</string>
    <string name="pref_general_connection_timeout_title">Connection timeout</string>
    <string name="pref_general_use_v1_insteadv2c_summary">Compatibility with SNMPv1</string>
    <string name="pref_general_use_v1_insteadv2c_title">SNMP version 1 instead of 2c</string>
    <string name="pref_periodic_update_summary">Time interval for user interface updates</string>
    <string name="pref_periodic_update_interval_dialog_title">UI update interval (seconds)</string>
    <string name="pref_periodic_update_interval">Refresh interval</string>
    <string name="pref_periodic_update_enabled_title">Periodic querying</string>
    <string name="pref_periodic_update_enabled_summary">Refreshes the user interface (tab contents need to be refreshed manually)</string>
    <string name="pref_mib_configuration_title">MIB configuration</string>
    <string name="preference_mib_catalog_selection">Selected MIB catalog</string>
    <string name="preference_mib_catalog_selection_summary">You can import MIB catalog .zip-files in catalog screen and selecting one here</string>
    <string name="preference_mib_catalog_reset_summary">Use this action to delete imported MIB catalogs and use default</string>
    <string name="preference_reset_mibs">Reset MIB catalogs</string>
    <string name="pref_show_ipv6_link_local_addresses">Show IPv6 Link-Local Addresses</string>
</resources>