<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ snmp-cockpit
  ~
  ~ Copyright (C) 2018-2023
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="general_category"
        android:title="@string/pref_category_general">

        <SwitchPreference
            android:key="periodic_ui_update_enabled"
            android:title="@string/pref_periodic_update_enabled_title"
            android:icon="@drawable/ic_refresh_white"
            android:summary="@string/pref_periodic_update_enabled_summary"
            android:defaultValue="true" />

        <EditTextPreference
            android:key="ui_update_interval_seconds"
            android:icon="@drawable/ic_update_white"
            android:dependency="periodic_ui_update_enabled"
            android:title="@string/pref_periodic_update_interval"
            android:dialogTitle="@string/pref_periodic_update_interval_dialog_title"
            android:dialogLayout="@layout/pref_number_layout"
            android:summary="@string/pref_periodic_update_summary"
            android:defaultValue="15" />

        <SwitchPreference
            android:key="use_v1_instead_of_v2c"
            android:defaultValue="false"
            android:icon="@drawable/ic_accessibility_white"
            android:title="@string/pref_general_use_v1_insteadv2c_title"
            android:summary="@string/pref_general_use_v1_insteadv2c_summary" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_mib_configuration_title"
        android:key="mib_catalog">
        <ListPreference
            android:key="mib_catalog_selection"
            android:icon="@drawable/ic_view_list_white"
            android:title="@string/preference_mib_catalog_selection"
            android:summary="@string/preference_mib_catalog_selection_summary"
            android:defaultValue="default_catalog"
            android:entries="@array/listArray"
            android:entryValues="@array/listValues" />

        <Preference
            android:key="mib_catalog_reset"
            android:title="@string/preference_reset_mibs"
            android:summary="@string/preference_mib_catalog_reset_summary" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="debug_category"
        android:title="@string/debug_menu_label">

        <SwitchPreference
            android:key="is_ipv6_link_local_displayed"
            android:defaultValue="false"
            android:title="@string/pref_show_ipv6_link_local_addresses" />

        <EditTextPreference
            android:key="connection_timeout"
            android:title="@string/pref_general_connection_timeout_title"
            android:dialogLayout="@layout/pref_number_layout"
            android:summary="@string/pref_general_connection_timeout_summary"
            android:defaultValue="5000" />

        <EditTextPreference
            android:key="connection_retries"
            android:title="@string/pref_general_connection_retries_title"
            android:dialogLayout="@layout/pref_number_layout"
            android:summary="@string/pref_general_connection_retries_summary"
            android:defaultValue="3" />

        <EditTextPreference
            android:key="connection_test_timeout"
            android:title="@string/pref_connection_test_timeout_title"
            android:dialogLayout="@layout/pref_number_layout"
            android:summary="@string/pref_connection_test_timeout_summary"
            android:defaultValue="750" />

        <EditTextPreference
            android:key="connection_test_retries"
            android:title="@string/pref_connection_test_retries_title"
            android:dialogLayout="@layout/pref_number_layout"
            android:summary="@string/pref_connection_test_retries_summary"
            android:defaultValue="2" />

        <Preference
            android:key="request_action_counter"
            android:enabled="false"
            android:title="RequestInteractionCounter" />
    </PreferenceCategory>

</PreferenceScreen>
