<!--
  ~ SNMP Cockpit Android App
  ~
  ~ Copyright (C) 2018-2019
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.emschu.snmp.cockpit.activity.TabbedDeviceActivity">
    <item
        android:id="@+id/action_device_disconnect"
        android:orderInCategory="100"
        android:title="@string/device_menu_disconnect"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_device_refresh"
        android:title="@string/update_label"
        android:icon="@drawable/ic_refresh_white"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_device_connection_info"
        android:title="@string/connection_information"
        android:icon="@drawable/ic_lock_outline_black"
        app:showAsAction="never" />
</menu>
