<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ SNMP Cockpit Android App
  ~
  ~ Copyright (C) 2018-2019
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <TableRow>

            <TextView
                android:layout_gravity="center_vertical"
                android:text="@string/custom_query_name" />

            <EditText
                android:id="@+id/dialog_custom_query_name_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:ems="3"
                android:hint="@string/custom_query_name"
                android:inputType="text"
                android:singleLine="false" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_gravity="center_vertical"
                android:text="@string/custom_query_oid_field_label" />

            <EditText
                android:id="@+id/dialog_custom_query_oid_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:digits="0123456789."
                android:ems="3"
                android:hint="@string/query_add_textinfo"
                android:inputType="number"
                android:singleLine="false" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_gravity="center_vertical"
                android:text="@string/custom_query_single_query_enabled" />

            <CheckBox
                android:id="@+id/dialog_custom_query_checkbox_questionMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_gravity="end" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_gravity="center_vertical"
                android:text="@string/custom_query_tag_categories_label" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/dialog_custom_query_current_tag_list"
                        android:layout_width="202dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:elegantTextHeight="true"
                        android:singleLine="false"
                        android:textAlignment="viewStart"
                        android:textColor="@color/colorViolet"
                        android:textStyle="bold"
                        app:autoSizeTextType="uniform" />

                    <ImageButton
                        android:id="@+id/dialog_custom_query_remove_tags"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_marginEnd="8dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:background="@color/colorTransparent"
                        android:contentDescription="@string/dialog_custom_query_tags_remove_last_tag_content_description"
                        app:srcCompat="@drawable/ic_close_black" />
                </RelativeLayout>

                <AutoCompleteTextView
                    android:id="@+id/dialog_custom_query_tags_autocomplete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:completionThreshold="0"
                    android:cursorVisible="false"
                    android:ems="3"
                    android:hint="@string/custom_query_hardware_type_hint"
                    android:inputType="text" />

            </LinearLayout>
        </TableRow>
    </TableLayout>
</ScrollView>